--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="not ready for production" />
-    <title>HAPPY FOURTH /// Emkay, Inc.</title>
+    <title>TEST /// Emkay, Inc.</title>
   </head>
   <body>
     <div id="wrapper">
