required vehicle number parameter 123456

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,9 +19,7 @@
         <!-- Secondary Navigation Bar -->
         ${require("./partials/altbar.html")}
         <div class="container">
-          <h1 class="jumbotron display-4 mt-3">
-            Vehicle Dashboard
-          </h1>
+          <h1 class="jumbotron display-4 mt-3">Vehicle Dashboard</h1>
 
           ${require("./partials/vehicle-dashboard.html")}
         </div>
