only display an error if no vehicle supplied

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,12 +15,10 @@
       ${require("./partials/topbar.html")}
 
       <!-- Main Content Wrapper -->
-      <main class="content">
+      <main class="content" id="main">
         <!-- Secondary Navigation Bar -->
         ${require("./partials/altbar.html")}
-        <div class="container">
-          <h1 class="jumbotron display-4 mt-3">Vehicle Dashboard</h1>
-
+        <div class="container" id="container">
           ${require("./partials/vehicle-dashboard.html")}
         </div>
       </main>
