pulling all data from json requests

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,8 @@
       <main class="content" id="main">
         <!-- Secondary Navigation Bar -->
         ${require("./partials/altbar.html")}
+
+        <!-- The Main Container -->
         <div class="container" id="container">
           ${require("./partials/vehicle-dashboard.html")}
         </div>
